--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   },
   "dependencies": {
     "@element-plus/icons": "^0.0.11",
+    "docxtemplater": "^3.67.1",
     "element-plus": "^2.11.5",
     "pinia": "^3.0.3",
+    "pizzip": "^3.2.0",
     "vue": "^3.5.22",
     "vue-element-plus-x": "^1.3.7",
     "vue-router": "^4.6.3"
