--- a/package.json
+++ b/package.json
@@ -17,16 +17,18 @@
   },
   "dependencies": {
     "@element-plus/icons": "^0.0.11",
-    "docxtemplater": "^3.67.1",
+    "docx-templates": "^4.14.1",
     "element-plus": "^2.11.5",
+    "file-saver": "^2.0.5",
+    "jszip": "^3.10.1",
     "pinia": "^3.0.3",
-    "pizzip": "^3.2.0",
     "vue": "^3.5.22",
     "vue-element-plus-x": "^1.3.7",
     "vue-router": "^4.6.3"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^22.18.6",
     "@unocss/transformer-directives": "^66.5.4",
     "@vitejs/plugin-vue": "^6.0.1",
