--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@element-plus/icons": "^0.0.11",
+    "buffer": "^6.0.3",
     "docx-templates": "^4.14.1",
     "element-plus": "^2.11.5",
     "file-saver": "^2.0.5",
