feat: 构建配置修改

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,8 +30,8 @@ jobs:
       - name: Deploy to Server
         uses: easingthemes/ssh-deploy@v4
         with:
-          ssh-private-key: ${{ secrets.SERVER_SSH_KEY }}
-          remote-host: ${{ secrets.SERVER_HOST }}
-          remote-user: ${{ secrets.SERVER_USERNAME }}
-          source: 'dist/'
-          target: '/opt/1panel/apps/openresty/openresty/www/sites/47.99.69.178'
+          SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_KEY }}
+          REMOTE_HOST: ${{ secrets.SERVER_HOST }}
+          REMOTE_USER: ${{ secrets.SERVER_USERNAME }}
+          SOURCE: 'dist/'
+          TARGET: '/opt/1panel/apps/openresty/openresty/www/sites/47.99.69.178'
