feat: 注册登录功能

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 VITE_APP_NAME = magicAI
 
-VITE_API_URL = http://47.99.69.178:3000/ai-service
+VITE_ALIPAY_AUTH_URL = https://openauth.alipay.com/oauth2/publicAppAuthorize.htm?app_id=2021006105634443&scope=auth_user&redirect_uri=http://47.99.69.178:8081
