--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 VITE_APP_NAME = magicAI
 
 VITE_ALIPAY_AUTH_URL = https://openauth.alipay.com/oauth2/publicAppAuthorize.htm?app_id=2021006105634443&scope=auth_user&redirect_uri=http://47.99.69.178:8081
+
+
+VITE_MAP_KEY=fd5403c3e387367f8a4cb69790880b51
+VITE_MAP_SECURITY = e361b4f30fc30cfe5ae92f1228477d5a
