--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@element-plus/icons": "^0.0.11",
+    "@vuemap/vue-amap": "^2.1.17",
     "buffer": "^6.0.3",
     "docx-templates": "^4.14.1",
     "element-plus": "^2.11.5",
