--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,4 +34,4 @@ jobs:
           REMOTE_HOST: ${{ secrets.SERVER_HOST }}
           REMOTE_USER: ${{ secrets.SERVER_USERNAME }}
           SOURCE: 'dist/'
-          TARGET: '/opt/1panel/apps/openresty/openresty/www/sites/47.99.69.178/index'
+          TARGET: '/opt/1panel/apps/openresty/openresty/www/sites/magicai/index'
