feat: 回跳地址修改

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 VITE_APP_NAME = magicAI
 
-VITE_ALIPAY_AUTH_URL = https://openauth.alipay.com/oauth2/publicAppAuthorize.htm?app_id=2021006105634443&scope=auth_user&redirect_uri=http://47.99.69.178:8081&state=alipay
+VITE_ALIPAY_AUTH_URL = https://openauth.alipay.com/oauth2/publicAppAuthorize.htm?app_id=2021006105634443&scope=auth_user&redirect_uri=https://easyai.xin/magicai/&state=alipay
 
 
 VITE_MAP_KEY=fd5403c3e387367f8a4cb69790880b51
